Fix title link focus outline visibility

--- a/sass/layout/_four-posts.scss
+++ b/sass/layout/_four-posts.scss
@@ -94,7 +94,7 @@
       height: auto;
       margin: 20px 0 0;
       order: 2;
-      overflow: hidden;
+      overflow: visible;
       width: 100%;
 
       @media (max-width: 450px) {
