--- a/sass/layout/_upsell-big.scss
+++ b/sass/layout/_upsell-big.scss
@@ -123,7 +123,7 @@
       font-weight: 500;
       height: 50px;
       margin: 0 0 20px;
-      overflow: hidden;
+      overflow: visible;
       width: 100%;
 
       @media (max-width: 600px) {
